fix image overflowing

--- a/src/global.css
+++ b/src/global.css
@@ -6,11 +6,7 @@
   margin: 0;
 }
 
-html body {
-  height: 100%;
-}
-
-img picture video canvas {
+img {
   display: block;
   max-width: 100%;
 }
